# Cognizant-Prodigi-22

./: .editorconfig  .gitignore  App.css  App.js  MyOrders.js  Page.js  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
API/: classes.py  main.py
admin/: App.py
admin/.streamlit/: config.toml
admin/pages/: Orders.py  Reviews.py
user/: hardhat.config.js  package-lock.json  package.json
user/public/: index.html
user/src/: Alpha.js  App.css  App.js  Beta.js  CardCarousel.js  Community.js  Contract.sol  Feedback.js  Grievance.js  Home.js  MyOrders.js  Orders.js  Page.js  Register.js  Service.js  Sidebar.js  Star.js  columns.js  deploy.js  index.js  useTableSearch.js
user/src/Contractdata/: Contract.json
user/src/artifacts/src/Contract.sol/: Contract.dbg.json  Contract.json
user/src/cache/: solidity-files-cache.json
